# prometheus-v10

./: .gitignore  check_api.py  count_lines.py  cross_file_verify.py  fix_imports.py  pyproject.toml  rename_package.py  run_e2e_test.py  test_import.py  test_v9pro_full.py
src/prometheus_v10/: __init__.py  anomaly.py  anti_evo.py  anti_pattern.py  benchmark_adapter.py  breaker.py  chain_validator.py  checkpoint.py  cli.py  coevolution_layer.py  compression.py  config.py  coral.py  crossover.py  curiosity.py  daily_learning.py  dynamic_security.py  ecosystem.py  engine.py  equilibrium.py  events.py  evolution_loop.py  evolution_memory.py  forbidden_ops.py  gate.py  guided.py  harness.py  harness_protocol.py  heartbeat.py  http.py  initiative.py  knowledge.py  layer_infra.py  lifecycle.py  manager.py  mcp.py  metabolism.py  ontology.py  operational_mirror.py  organs.py  (+19 more)
src/prometheus_v10/adapters/: evo_bus.py  hermes_llm.py  hermes_plugin.py  minerva_import.py  mnemosyne.py
src/prometheus_v9pro/: __init__.py  anti_evo.py  autonomy.py  checkpoint.py  cli.py  compression.py  config.py  coral.py  crossover.py  daily_learning.py  dynamic_security.py  embedder.py  engine.py  evolution_loop.py  gate.py  goal_system.py  graph.py  guided.py  harness.py  harness_protocol.py  http.py  initiative.py  knowledge.py  layer_infra.py  lifecycle.py  manager.py  mcp.py  metabolism.py  ontology.py  operational_mirror.py  organs.py  parallel.py  plan_validator.py  safe_harbor.py  schema.py  search.py  store.py  trace_store.py  trust.py  validator.py  (+2 more)
tests/: test_v10_new.py
(+7 files in other folders)
